# aulab

./: .gitignore  README.md  Selfwork 30 esercizi Python.ipynb  SelfworkPythonOOP.ipynb
.ipynb_checkpoints/: Selfwork 30 esercizi Python-checkpoint.ipynb
Modulo 2 - Coding Ai Ai RAG/1 - Selfwork LLM - OpenAI Chat Completion/Esercizi/: ex_1_OpenAI_API.ipynb  ex_2_OpenAI_API.ipynb  ex_5_OpenAI_API.ipynb
Modulo 2 - Coding Ai Ai RAG/1- Selfwork LLM - OpenAI Chat Completion/Esercizi/: ex_3_OpenAI_API.ipynb  ex_4_OpenAI_API.ipynb
Modulo 2 - Coding Ai Ai RAG/2 - Selfwork LLM - Ollama Local LLM/Esercizi/: ex_1_Ollama_chat.ipynb  ex_2_Ollama_chat.ipynb  ex_3_Ollama_chat.ipynb  ex_4_Ollama_chat.ipynb  ex_5_Ollama_chat.ipynb
Modulo 2 - Coding Ai Ai RAG/3 - Selfwork Rag Base/: .env.example  rag_base.py
Modulo 2 - Coding Ai Ai RAG/3 - Selfwork Rag Base/resumes/: giulia_bianchi.txt  luca_verdi.txt  mario_rossi.txt
Modulo 2 - Coding Ai Ai RAG/4 - Selfwork Progetto Hr Assistant/HR_Assistant/: .gitignore  README.md  app.py  chainlit.md  pyproject.toml
Modulo 2 - Coding Ai Ai RAG/4 - Selfwork Progetto Hr Assistant/HR_Assistant/hr_assistant/: __init__.py  config.py  custom_embedding.py  database.py  document_processor.py  semantic_chunking.py  utils.py
