[project]
name = "hr-assistant"
version = "0.1.0"
description = "Selfwork HR Assistant con Chainlit, RAG e Poetry"
authors = [
    {name = "Emanuel Marinelli"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "chainlit (>=2.0.5,<3.0.0)",
    "chromadb (>=0.6.3,<0.7.0)",
    "ollama (>=0.4.7,<0.5.0)",
    "openai (>=1.59.9,<2.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
